# nano-vllm-learn

./: .gitignore  LICENSE  Pytorch_SDPA_Backend.py  README.md  attention.py  bench.py  bench_my.py  benchmark_prefilling.py  example.py  flash_attention_example.py  flash_attention_v1_v2.py  learning.md  online_softmax.py  pyproject.toml  requirements.txt  safe_softmax.py  记录.md
nanovllm/: __init__.py  config.py  llm.py
nanovllm/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
nanovllm/layers/: activation.py  attention.py  attention_nj.py  attention_sdpa.py  attention_triton.py  bench.py  embed_head.py  layernorm.py  linear.py  moe_linear_fusion.py  rotary_embedding.py  sampler.py
nanovllm/models/: qwen3.py
nanovllm/utils/: context.py  loader.py  memory.py  timer.py
notes/: model_runner.md  python_multiprocessing.md  shm_communication.md
test/: test_attention_sdpa.py
